--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-.grid-container{
-	display:grid;
-	grid-template-areas: 
-	'header header header header header header'
-	'subtitle subtitle subtitle subtitle subtitle subtitle'
-	'left main main main main right'
-	'left footer footer footer footer right';
-	grid-gap:10px;
-	padding:10px;
-}
+
 /*Present in all pages*/
+
+
+#second-page-body{
+	border: black;
+	border-bottom-width: thin;
+}
+
+#WelcomeButton{
+	margin-left: 30%;
+	margin-right: 30%;
+
+}
+
 .header{
 	grid-area:header;
 	text-align:center;
