--- a/style.css
+++ b/style.css
@@ -1,116 +1,25 @@
-
-/*Present in all pages*/
-
-
 #sidebar {
 	background-color: white;
 	overflow: hidden;
 	height: 100%;
 	padding-bottom: 100%;
 	margin-bottom: -100%;
-}
-
-#sidebar .noMargin {
-	margin: 0 0 0 0;
-}
-
-
-#sidebar .header1 {
-	background-color: #c0c0c0;
-	border: 2px black solid;
-	border-left: 0;
-	border-right: 0;
-}
-
-
-.border {
-	border: 2px black solid;
-}
-
-#sidebar {
 	border-bottom: 0;
 	border-left: 0;
 }
 
-#info-container {
-	margin-top: 100px;
-	margin-left: 100px
+#dishIngredients{
+	background: antiquewhite;
 }
 
-
-
-#editWelcome{
-	margin-left: 30%;
-	margin-right: 30%;
-
+#welcomeButton{
+	margin-left: 40%;
 }
 
-.header{
-	grid-area:header;
-	text-align:center;
-	background-color:#949584; 
-	height: 100px;
-	font-size:24px;
-	font-weight: bold;
-	font-style:italic;
-}
-/*In index */
-.createNewDinnerView{
-	grid-area:main;
-	text-align: center;
-	padding:70px;
-	height: 150px;
-	border:3px solid green;
+#editDinnerButton{
+	 float:right;
 }
 
-/*In index  */
-.newDinnerButton{
-	grid-area:footer;
-	padding:20px;
-	text-align: center;	
-}
-
-/*In selectDish */
-.myDinnerLeft{
-	grid-area: left;
-}
-
-/*In selectDish */
-.dishSearch{
-	grid-area:main;
-}
-
-/*In selectDish */
-.displayDishes{
-	grid-area: footer;
-}
-
-/*In dishDetails */
-.dishInstructions{
-	grid-area: main;
-}
-
-/*In dishDetails */
-.dishIngredients{
-	grid-area: right;
-}
-
-/*In dinnerOverview */
-.subtitle{
-	grid-area: subtitle;
-}
-
-/*In dinnerOverview */
-.dinnerOverview{
-	grid-area: main;
-}
-
-/*In dinnerOverview*/
-.print-btn{
-	grid-area: footer;
-}
-
-/*In dinnerPrintout*/
-.printout{
-	grid-area: main;
+.border {
+	border: 2px black solid;
 }
